data/derived/sp14/progs/unify/prog3486.ml.out
Characters 33-34:
  let f a x = (a x) a in
                    ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a -> 'b -> 'c
